--- a/nextflow.config
+++ b/nextflow.config
@@ -1,6 +1,6 @@
 profiles {
     local {
-        process.conda = "$CONDA_PREFIX/envs/ply"
+        process.conda = "$CONDA_PREFIX/envs/CloudPoint"
         executor.queueSize = 1
     }
     kuma {
