--- a/exp_config/home.yaml
+++ b/exp_config/home.yaml
@@ -4,9 +4,10 @@ epoch: [10] #could do several epoch, but please keep this param to 1 element
 scale: [1.0]
 fourier: ["--fourier"]
 norm: ["one_minus"]
-arch: ["default", "default-BN", "skipMed", "Vlarge"]
+arch: ["default", "default-BN", "Vlarge", "SIREN"]
 lr: [0.001]
 mapping_size: [512]
 act: ["relu"]
+act_last: ["relu"]
 wd: ["0.0001"]
 lambda_t: [1.0]
