--- a/exp_config/paper.yaml
+++ b/exp_config/paper.yaml
@@ -4,7 +4,7 @@ epoch: [100] #could do several epoch, but please keep this param to 1 element
 scale: [1.0, 5.0]
 fourier: ["--fourier"]
 norm: ["one_minus"]
-arch: ["default", "default-BN", "skipMed", "Vlarge"]
+arch: ["default", "default-BN", "Vlarge"]
 lr: [0.001, 0.01, 0.1]
 mapping_size: [512, 1024]
 act: ["relu"]
