--- a/exp_config/paper.yaml
+++ b/exp_config/paper.yaml
@@ -1,4 +1,5 @@
 out: result/paper
+path: "data/full_data/"
 extension: "ply"
 epoch: [100] #could do several epoch, but please keep this param to 1 element
 scale: [1.0, 5.0]
