changed yaml for test on raiden

--- a/exp_config/test_raiden.yaml
+++ b/exp_config/test_raiden.yaml
@@ -1,13 +1,29 @@
+configname: exp_config/test_raiden.yaml
 out: result/test
 path: data/test/
-extension: "ply"
-epoch: [10] #could do several epoch, but please keep this param to 1 element
-scale: [1.0]
+extension: ply
+epochs: 50
+trials: 10
+norm: "one_minus"
+single_method: [None, L1_diff]
 fourier: ["--fourier"]
-norm: ["one_minus"]
-arch: ["default", "default-BN", "Vlarge"]
-lr: [0.001]
-mapping_size: [512]
-act: ["relu"]
-wd: ["0.0001"]
-lambda_t: [1.0]
+lr: #log search
+  - 1.e-5 # min
+  - 1.e-1 # max
+wd: #log search
+  - 1.e-5 # min
+  - 1.e+1 # max
+bs: # power of 2 search
+  - 9 # 512 # min
+  - 12 # 2048 # max
+scale: # power of 2 search
+  - 0 # min
+  - 5 # max
+mapping_size: # power of 2 search
+  - 7 # min
+  - 10 # max
+lambda_t: #log search
+  - 1.e-5 # min
+  - 1.e+1 # max
+act: [tanh, relu]
+arch: [default, default-BN, Vlarge]
