--- a/exp_config/test_raiden.yaml
+++ b/exp_config/test_raiden.yaml
@@ -4,9 +4,9 @@ path: data/test/
 extension: ply
 epochs: 50
 trials: 10
-norm: "one_minus"
+norm: one_minus
 single_method: [None, L1_diff]
-fourier: ["--fourier"]
+fourier: [--fourier]
 lr: #log search
   - 1.e-5 # min
   - 1.e-1 # max
