--- a/exp_config/paper.yaml
+++ b/exp_config/paper.yaml
@@ -6,7 +6,7 @@ epochs: 100
 trials: 50
 norm: one_minus
 single_method: [None, L1_diff]
-fourier: [--fourier, --not-fourier]
+fourier: [--fourier, ""]
 lr: #log search
   - 1.e-5 # min
   - 1.e-1 # max
