--- a/nextflow.config
+++ b/nextflow.config
@@ -10,19 +10,23 @@ profiles {
     raiden {
         process {
 		    executor = 'sge'
-        	withLabel: '!gpu' { 
-                conda = "$CONDA_PREFIX/envs/CloudPoint" 
+        	withLabel: '!gpu' {
+                conda = "$CONDA_PREFIX/envs/CloudPoint"
 		        clusterOptions = "-v PATH=/usr/bin:/home/pnaylor/miniconda3/bin:$PATH"
             }
         	withLabel: 'gpu' {
 		            clusterOptions = "-jc gpu-container_g1 -ac d=nvcr-pytorch-2204 -v PATH=/usr/bin:/home/pnaylor/miniconda3/bin:$PATH"
                 	beforeScript = ". /fefs/opt/dgx/env_set/nvcr-pytorch-2204.sh"
-	        } 
+	        }
+            withLabel: 'largegpu' {
+                            clusterOptions = "-jc gs-container_g1 -ac d=nvcr-pytorch-2204 -v PATH=/usr/bin:/home/pnaylor/miniconda3/bin:$PATH"
+                        beforeScript = ". /fefs/opt/dgx/env_set/nvcr-pytorch-2204.sh"
+                }
         	withLabel: 'OT' {
 		            clusterOptions = "-jc gpu-container_g1 -ac d=nvcr-cuda-11.1-cudnn8.0 -v PATH=/usr/bin:/home/pnaylor/miniconda3/bin:$PATH"
-                    conda = "$CONDA_PREFIX/envs/CloudPointJax" 
+                    conda = "$CONDA_PREFIX/envs/CloudPointJax"
                 	// beforeScript = "export LD_LIBRARY_PATH=/home/pnaylor/miniconda3/env/CloudPointJax/lib:$LD_LIBRARY_PATH"
-	        } 
+	        }
         }
         executor.queueSize = 500
         executor.submitRateLimit = '10 sec'
