--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,7 +8,7 @@ repos:
     -   id: check-added-large-files
     -   id: debug-statements
     -   id: end-of-file-fixer
-    -   id: trailing-whitespace
+    # -   id: trailing-whitespace
 -   repo: https://github.com/psf/black
     rev: 22.3.0
     hooks:
