modified plots and fixed some issues

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ results
 *.csv
 *.npz
 .vscode/
+python/src/old/
 
 # Created by https://www.toptal.com/developers/gitignore/api/python,r,jupyternotebooks,macos,linux
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,r,jupyternotebooks,macos,linux
