small modified gitignre

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ results
 *.npz
 .vscode/
 python/src/old/
+python/plots/__pycache__/
 
 # Created by https://www.toptal.com/developers/gitignore/api/python,r,jupyternotebooks,macos,linux
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,r,jupyternotebooks,macos,linux
