updated with TV norm

--- a/exp_config/paper.yaml
+++ b/exp_config/paper.yaml
@@ -5,8 +5,9 @@ extension: ply
 epochs: 50
 trials: 50
 norm: one_minus
-single_method: [None, L1_diff]
-fourier: [--fourier, ""]
+single_method: [M+L1TD, M+L1TD+TVN, M+TVN]
+double_method: [M+TVN]
+fourier: [--fourier]
 lr: #log search
   - 1.e-5 # min
   - 1.e-1 # max
@@ -14,15 +15,21 @@ wd: #log search
   - 1.e-5 # min
   - 1.e+1 # max
 bs: # power of 2 search
-  - 13 # 512 # min
-  - 16 # 2048 # max
+  - 9 # 512 # min
+  - 13 # 2048 # max
 scale: # power of 2 search
   - 0 # min
   - 6 # max
 mapping_size: # power of 2 search
   - 7 # min
-  - 10 # max
-lambda_t: #log search
+  - 11 # max
+lambda_discrete: #log search
+  - 1.e-5 # min
+  - 1.e+1 # max
+lambda_gradient_time: #log search
+  - 1.e-5 # min
+  - 1.e+1 # max
+lambda_tvn: #log search
   - 1.e-5 # min
   - 1.e+1 # max
 act: [tanh, relu]
