--- a/exp_config/home.yaml
+++ b/exp_config/home.yaml
@@ -2,10 +2,11 @@ configname: exp_config/home.yaml
 out: result/home
 path: data/clippeddata/clippedMarco
 extension: txt
-epochs: 50
-trials: 10
+epochs: 30
+trials: 5
 norm: "one_minus"
-single_method: [None, L1_diff]
+single_method: [M, M+L1TD, M+L1TG, M+TVN]
+double_method: [M, M+TVN]
 fourier: [--fourier]
 lr: #log search
   - 1.e-5 # min
@@ -22,9 +23,16 @@ scale: # power of 2 search
 mapping_size: # power of 2 search
   - 7 # min
   - 11 # max
-lambda_t: #log search
+lambda_discrete: #log search
   - 1.e-5 # min
   - 1.e+1 # max
+lambda_gradient_time: #log search
+  - 1.e-5 # min
+  - 1.e+1 # max
+lambda_tvn: #log search
+  - 1.e-5 # min
+  - 1.e+1 # max
+loss_tvn: [l1]
 act: [tanh, relu]
 arch: [default, default-BN, Vlarge, skip-4, skip-5, skip-6]
 verbose: 1
