--- a/exp_config/paper.yaml
+++ b/exp_config/paper.yaml
@@ -32,6 +32,7 @@ lambda_gradient_time: #log search
 lambda_tvn: #log search
   - 1.e-5 # min
   - 1.e+1 # max
+loss_tvn: [l1, huber]
 act: [tanh, relu]
 arch: [default, default-BN, Vlarge, skip-4, skip-5, skip-6]
 verbose: 0
