--- a/exp_config/home.yaml
+++ b/exp_config/home.yaml
@@ -2,13 +2,12 @@ configname: exp_config/home.yaml
 out: result/home
 path: data/clippeddata/clippedMarco
 extension: txt
-epochs: 30
+epochs: 50
 trials: 5
 norm: "one_minus"
-single_method: [M, M+L1TD, M+L1TG, M+TVN]
-double_method: [M, M+TVN]
-fourier: [--fourier]
-SIREN: [--siren, ""]
+single_method: [M+L1TD+TVN] #, M+L1TG M , M+L1TD, , M+TVN
+double_method: [] # [M, M+TVN]
+feature_method: [--siren, --fourier, ""] # [, --siren, ""]
 lr: #log search
   - 1.e-5 # min
   - 1.e-1 # max
@@ -33,6 +32,10 @@ lambda_gradient_time: #log search
 lambda_tvn: #log search
   - 1.e-5 # min
   - 1.e+1 # max
+siren:
+  hidden_num: [1, 5]
+  hidden_dim: [6, 10] # power of 2 search
+  do_skip: [0, 1]
 loss_tvn: [l1]
 act: [tanh, relu]
 arch: [default, default-BN, Vlarge, skip-4, skip-5, skip-6]
