--- a/exp_config/paper.yaml
+++ b/exp_config/paper.yaml
@@ -32,11 +32,10 @@ lambda_gradient_time: #log search
 lambda_tvn: #log search
   - 1.e-5 # min
   - 1.e+1 # max
-SIREN:
-  - parameters:
-      hidden_num: [1, 6]
-      hidden_dim: [6, 12] # power of 2 search
-      do_skip: [0, 1]
+siren:
+  hidden_num: [1, 5]
+  hidden_dim: [6, 10] # power of 2 search
+  do_skip: [0, 1]
 loss_tvn: [l1, huber]
 act: [tanh, relu]
 arch: [default, Vlarge, skip-4, skip-5, skip-6]
