--- a/exp_config/paper.yaml
+++ b/exp_config/paper.yaml
@@ -5,9 +5,9 @@ extension: ply
 epochs: 50
 trials: 50
 norm: one_minus
-single_method: [M+L1TD, M+L1TD+TVN, M+TVN]
-double_method: [M+TVN]
-feature_method: [--fourier, --siren]
+single_method: [M, M+L1TD, M+L1TD+TVN, M+TVN]
+double_method: [M, M+TVN]
+feature_method: [--fourier, --siren, ""]
 lr: #log search
   - 1.e-5 # min
   - 1.e-1 # max
@@ -15,8 +15,8 @@ wd: #log search
   - 1.e-5 # min
   - 1.e+1 # max
 bs: # power of 2 search
-  - 9 # 512 # min
-  - 13 # 2048 # max
+  - 11 # 512 # min
+  - 14 # 2048 # max
 scale: # power of 2 search
   - 0 # min
   - 8 # max
@@ -36,7 +36,7 @@ siren:
   hidden_num: [1, 5]
   hidden_dim: [6, 10] # power of 2 search
   do_skip: [0, 1]
-loss_tvn: [l1, huber]
-act: [tanh, relu]
-arch: [default, Vlarge, skip-4, skip-5, skip-6]
+loss_tvn: [l1]
+act: [tanh]
+arch: [skip-5]
 verbose: 0
