--- a/nextflow.config
+++ b/nextflow.config
@@ -4,7 +4,12 @@ profiles {
         executor.queueSize = 1
     }
     kuma {
-        process.conda = "$CONDA_PREFIX/envs/SDCNN"
+        process.conda = "$CONDA_PREFIX/envs/CloudPoint"
+        process {
+            withLabel: 'gpu' {
+                beforeScript = "source ${HOME}/NN-CD/GPU_LOCKS/set_gpu.sh ${HOME}/NN-CD"
+                afterScript = "source ${HOME}/NN-CD/GPU_LOCKS/free_gpu.sh ${HOME}/NN-CD"
+                }
         executor.queueSize = 8
         }
     raiden {
