--- a/exp_config/paper.yaml
+++ b/exp_config/paper.yaml
@@ -12,8 +12,8 @@ lr: #log search
   - 1.e-5 # min
   - 1.e-1 # max
 wd: #log search
-  - 1.e-5 # min
-  - 1.e+1 # max
+  - 1.e-7 # min
+  - 1.e-6 # max
 bs: # power of 2 search
   - 11 # 512 # min
   - 14 # 2048 # max
