--- a/nextflow.config
+++ b/nextflow.config
@@ -7,8 +7,8 @@ profiles {
         process.conda = "$CONDA_PREFIX/envs/CloudPoint"
         process {
             withLabel: 'gpu' {
-                beforeScript = "source ${HOME}/NN-CD/GPU_LOCKS/set_gpu.sh ${HOME}/NN-CD"
-                afterScript = "source ${HOME}/NN-CD/GPU_LOCKS/free_gpu.sh ${HOME}/NN-CD"
+                beforeScript = "source $HOME/NN-CD/GPU_LOCKS/set_gpu.sh $HOME/NN-CD"
+                afterScript = "source $HOME/NN-CD/GPU_LOCKS/free_gpu.sh $HOME/NN-CD"
                 }
         executor.queueSize = 8
         }
