--- a/nextflow.config
+++ b/nextflow.config
@@ -4,6 +4,7 @@ profiles {
         executor.queueSize = 1
     }
     kuma {
+        process.executor = 'local'
         process.conda = "$CONDA_PREFIX/envs/CloudPoint"
         process {
             withLabel: 'gpu' {
