--- a/nextflow.config
+++ b/nextflow.config
@@ -4,15 +4,16 @@ profiles {
         executor.queueSize = 1
     }
     kuma {
-        process.executor = 'local'
-        process.conda = "$CONDA_PREFIX/envs/CloudPoint"
+        conda.enabled = true
+        conda.useMamba = true
         process {
+            conda = '/home/pnaylor/miniconda3/envs/CloudPoint'
             withLabel: 'gpu' {
                 beforeScript = "source $HOME/NN-CD/GPU_LOCKS/set_gpu.sh $HOME/NN-CD"
                 afterScript = "source $HOME/NN-CD/GPU_LOCKS/free_gpu.sh $HOME/NN-CD"
                 }
-        executor.queueSize = 8
         }
+        executor.queueSize = 8
     }
     raiden {
         process {
