--- a/nextflow.config
+++ b/nextflow.config
@@ -5,7 +5,7 @@ profiles {
     }
     kuma {
         process.executor = 'local'
-        process.conda = "$CONDA_PREFIX/envs/CloudPoint"
+        process.conda = "/home/pnaylor/miniconda3/envs/CloudPoint"
         process {
             withLabel: 'gpu' {
                 beforeScript = "source $HOME/NN-CD/GPU_LOCKS/set_gpu.sh $HOME/NN-CD"
