--- a/exp_config/kuma.yaml
+++ b/exp_config/kuma.yaml
@@ -1,8 +1,8 @@
 configname: exp_config/kuma.yaml
 out: result/paper
-path: data/clippeddata/clippedMarco
-extension: txt
-epochs: 20
+path: data/full_data/
+extension: ply
+epochs: 40
 trials: 10
 norm: one_minus
 single_method: [M, M+L1TD, M+L1TD+TVN, M+TVN]
