--- a/exp_config/kuma.yaml
+++ b/exp_config/kuma.yaml
@@ -2,20 +2,20 @@ configname: exp_config/kuma.yaml
 out: result/paper
 path: data/full_data/
 extension: ply
-epochs: 40
-trials: 10
+epochs: 50
+trials: 20
 norm: one_minus
 single_method: [M, M+L1TD, M+TVN]
 double_method: []
 feature_method: [--fourier]
 lr: #log search
   - 1.e-5 # min
-  - 1.e-1 # max
+  - 1.e-3 # max
 wd: #log search
   - 1.e-6 # min
   - 1.e-4 # max
 bs: # power of 2 search
-  - 11 # 512 # min
+  - 10 # 512 # min
   - 14 # 2048 # max
 scale: # power of 2 search
   - 0 # min
@@ -24,18 +24,18 @@ mapping_size: # power of 2 search
   - 7 # min
   - 11 # max
 lambda_discrete: #log search
-  - 1.e-5 # min
-  - 1.e+1 # max
+  - 1.e-4 # min
+  - 1.e-2 # max
 lambda_gradient_time: #log search
-  - 1.e-5 # min
-  - 1.e+1 # max
+  - 1.e-4 # min
+  - 1.e-2 # max
 lambda_tvn: #log search
-  - 1.e-5 # min
-  - 1.e+1 # max
+  - 1.e-4 # min
+  - 1.e-2 # max
 siren:
-  hidden_num: [1, 5]
+  hidden_num: [1, 3]
   hidden_dim: [6, 10] # power of 2 search
-  do_skip: [0, 1]
+  do_skip: [1]
 loss_tvn: [l1]
 act: [tanh]
 arch: [skip-5]
