--- a/exp_config/kuma_looting.yaml
+++ b/exp_config/kuma_looting.yaml
@@ -1,11 +1,11 @@
 configname: exp_config/kuma.yaml
-out: result/paper
-path: data/full_data/
+out: result/looting
+path: data/looting/
 extension: ply
 epochs: 50
 trials: 20
 norm: one_minus
-single_method: [M, M+L1TD, M+TVN]
+single_method: [M, M+L1TD, M+TVN, M+TVN+L1TD]
 double_method: []
 feature_method: [--fourier]
 lr: #log search
