--- a/exp_config/kuma_looting.yaml
+++ b/exp_config/kuma_looting.yaml
@@ -1,6 +1,6 @@
 configname: exp_config/kuma.yaml
-out: result/looting
-path: data/looting/
+out: result/looting/
+path: data/looting/*
 extension: ply
 epochs: 50
 trials: 20
