added mse with respect to high res no noise

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,6 +1,10 @@
 profiles {
     local {
-        process.conda = "$CONDA_PREFIX/envs/CloudPoint"
+        conda.enabled = true
+        conda.useMamba = true
+        process {
+            conda = '/home/pnaylor/apps/miniconda3/envs/ply'
+        }
         executor.queueSize = 1
     }
     kuma {
