--- a/exp_config/paper.yaml
+++ b/exp_config/paper.yaml
@@ -3,11 +3,11 @@ out: result/paper
 path: data/full_data/
 extension: ply
 epochs: 50
-trials: 50
+trials: 60
 norm: one_minus
 single_method: [M, M+L1TD, M+L1TD+TVN, M+TVN]
 double_method: [M, M+TVN]
-feature_method: [--fourier, --siren, ""]
+feature_method: [--fourier, --siren]
 lr: #log search
   - 1.e-5 # min
   - 1.e-1 # max
