--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ results
 .vscode/
 python/src/old/
 python/plots/__pycache__/
+result/
 
 # Created by https://www.toptal.com/developers/gitignore/api/python,r,jupyternotebooks,macos,linux
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,r,jupyternotebooks,macos,linux
