--- a/exp_config/kuma_looting.yaml
+++ b/exp_config/kuma_looting.yaml
@@ -10,33 +10,29 @@ double_method: []
 feature_method: [--fourier, --siren]
 lr: #log search
   - 1.e-5 # min
-  - 1.e-3 # max
+  - 1.e-2 # max
 bs: # power of 2 search
-  - 10 # 512 # min
-  - 14 # 2048 # max
+  - 11 # 2048 # min
+  - 14 # 16384 # max
 scale: # power of 2 search
   - 0 # min
-  - 8 # max
+  - 10 # max
 mapping_size: # power of 2 search
   - 7 # min
   - 11 # max
 lambda_discrete: #log search
-  - 1.e-4 # min
-  - 1.e-2 # max
-lambda_tvn_t: #log search
   - 1.e-5 # min
-  - 1.e-2 # max
-lambda_tvn_t_sd: #log search
-  - 1.e- # min
-  - 5.e-1 # max
+  - 1.e+1 # max
+lambda_gradient_time: #log search
+  - 1.e-5 # min
+  - 1.e+1 # max
 lambda_tvn: #log search
   - 1.e-5 # min
-  - 1.e-2 # max
+  - 1.e+1 # max
 siren:
-  hidden_num: [1, 3]
-  hidden_dim: [6, 10] # power of 2 search
+  hidden_num: [4, 6]
+  hidden_dim: [7, 9] # power of 2 search
   do_skip: [1]
-loss_tvn: [l1]
 act: [tanh]
 arch: [skip-5]
 verbose: 0
