--- a/exp_config/kuma_looting.yaml
+++ b/exp_config/kuma_looting.yaml
@@ -7,7 +7,7 @@ trials: 50
 norm: one_minus
 single_method: [M, M+L1TD, M+TVN, M+TVN+L1TD]
 double_method: []
-feature_method: [--fourier, --siren]
+feature_method: [--fourier]
 lr: #log search
   - 1.e-5 # min
   - 1.e-2 # max
