--- a/nextflow.config
+++ b/nextflow.config
@@ -3,23 +3,11 @@ profiles {
         conda.enabled = true
         conda.useMamba = true
         process {
-            conda = '/home/pnaylor/apps/miniconda3/envs/ply'
+            conda = '/home/pnaylor/apps/miniconda3/envs/CloudPoint'
         }
         executor.queueSize = 1
     }
-    kuma {
-        conda.enabled = true
-        conda.useMamba = true
-        process {
-            conda = '/home/pnaylor/miniconda3/envs/CloudPoint'
-            withLabel: 'gpu' {
-                beforeScript = "source $HOME/NN-CD/GPU_LOCKS/set_gpu.sh $HOME/NN-CD"
-                afterScript = "source $HOME/NN-CD/GPU_LOCKS/free_gpu.sh $HOME/NN-CD"
-                }
-        }
-        executor.queueSize = 28
-    }
-    raiden {
+    cluster {
         process {
 		    executor = 'sge'
         	withLabel: '!gpu' {
