--- a/exp_config/home.yaml
+++ b/exp_config/home.yaml
@@ -5,12 +5,12 @@ extension: txt
 epochs: 50
 trials: 5
 norm: "one_minus"
-single_method: [M+L1TD+TVN] #, M+L1TG M , M+L1TD, , M+TVN
+single_method: [M+TD+TVN] #, M , M+TD, , M+TVN
 double_method: [] # [M, M+TVN]
 feature_method: [--siren] # [, --siren, ""], --fourier, ""
 lr: #log search
   - 1.e-5 # min
-  - 1.e-1 # max
+  - 1.e-3 # max
 bs: # power of 2 search
   - 9 # 512 # min
   - 13 # 2048 # max
@@ -20,7 +20,7 @@ scale: # power of 2 search
 mapping_size: # power of 2 search
   - 7 # min
   - 11 # max
-lambda_discrete: #log search
+lambda_td: #log search
   - 1.e-5 # min
   - 1.e+1 # max
 lambda_gradient_time: #log search
@@ -30,10 +30,9 @@ lambda_tvn: #log search
   - 1.e-5 # min
   - 1.e+1 # max
 siren:
-  hidden_num: [1, 5]
-  hidden_dim: [6, 10] # power of 2 search
-  do_skip: [0, 1]
-loss_tvn: [l1]
-act: [tanh, relu]
-arch: [default, Vlarge, skip-4, skip-5, skip-6]
+  hidden_num: [4, 6]
+  hidden_dim: [7, 9] # power of 2 search
+  do_skip: [1]
+act: [tanh]
+arch: [skip-ten-only]
 verbose: 1
