--- a/exp_config/home_ablation.yaml
+++ b/exp_config/home_ablation.yaml
@@ -1,11 +1,11 @@
 configname: exp_config/home_ablation.yaml
 out: result/home
-path: data/clippeddata/clippedMarco
+path: data/path/home
 extension: txt
 epochs: 50
 trials: 20
 norm: one_minus
-single_method: [M+TD]
+single_method: [M+TD, M+TVN]
 feature_method: [--siren]
 lr: #log search
   - 1.e-5 # min
