--- a/nextflow.config
+++ b/nextflow.config
@@ -1,22 +1,17 @@
 profiles {
+    conda.enabled = true
+    conda.useMamba = true
+    process {
+        conda = 'environment.yaml'
+    }
     local {
-        conda.enabled = true
-        conda.useMamba = true
-        process {
-            conda = '/home/pnaylor/apps/miniconda3/envs/CloudPoint'
-        }
         executor.queueSize = 1
     }
     cluster {
         process {
 		    executor = 'sge'
-        	withLabel: '!gpu' {
-                conda = "$CONDA_PREFIX/envs/CloudPoint"
-		        clusterOptions = "-v PATH=/usr/bin:/home/pnaylor/miniconda3/bin:$PATH"
-            }
         	withLabel: 'gpu' {
-		            clusterOptions = "-jc gpu-container_g1 -ac d=nvcr-pytorch-2204 -v PATH=/usr/bin:/home/pnaylor/miniconda3/bin:$PATH"
-                	beforeScript = ". /fefs/opt/dgx/env_set/nvcr-pytorch-2204.sh"
+                conda = "CloudPointGPU"
 	        }
         }
         executor.queueSize = 500
